--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
-    "mongose": "^0.0.2-security"
+    "mongoose": "^6.4.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
